2005-12-14  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/about/index.html: update Links

2005-12-13  Pedro Kroger  <kroeger@pedrokroeger.net>

	* site/devel/index.html: update savannah cvs link.

2005-12-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/index.html: update LAD links.

2005-12-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* nl/*.html:
	* fr/*.html:
	* site/*.html: Remove out-www from 2.6, 2.7 (latest) doc links.

2005-11-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/documentation.html: idem.

	* site/index.html: idem.
 
	* nl/index.html: idem.
 
	* fr/index.html: update 2.6 doc links.

2005-11-28  Jean-Charles Malahieude  <lilyfan@wanadoo.fr>

	* fr/about/*, fr/index.html, fr/documentation.html: corrections

2005-11-28  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* site/about/name.html: add header (for translation).
	"thanks.html" link changed to "thanks".

	* fr/about/name.html: new translated page.
	
	* fr/about/*, fr/index.html, fr/documentation.html: translation
	updates

2005-11-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/thanks.html: add name.html link.

	* site/about/name.html: new file.

2005-11-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/devel/packaging.html: remove SUSE & Mandrake instructions.

	* site/about/faq.html: remove info which is covered in the
	download page.
	remove TeX q&a.

	* site/about/thanks.html: move bio from FAQ.

	* nl/about/index.html: idem.

	* site/about/index.html: link to thanks.html only.

	* nl/about/index.html: use trumpet image.
	link to latest, not hardcoded version. This ensures that AUTHOR
	links stay healthy.

	* site/about/index.html: don't link features page.

	* site/about/menu-entries.py: remove Features page.

	* site/about/faq.html (href): link to sponsor, not donate

2005-11-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/news.ihtml (href): Remove stray end comment marker.

2005-11-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>
