@@ -25,6 +25,22 @@ What others wrote:
 
 
 <dl>
+  <dt>December 2005</dt>
+  <dd>
+    <!-- Not yet electronically available, but mention to give users a chance
+	 to buy the magazine at news stand !-->
+    
+    Linux Journal publishes an article on
+    <a href="http://www.linuxjournal.com/article/8583"><em>Stunning
+    [Schenker] Graphics with GNU LilyPond</em></a>, as it is
+    advertised on the cover.  It is a in-depth but hands-on multimedia
+    feature article with crisp LilyPond graphics.
+    <br>
+    Schenkerian Analysis [..] is notoriously difficult to notate using
+    [..] Finale and Sibelius.  [..] LilyPond [is] a powerful tool for
+    creating Schenkerian notation graphs.
+  </dd>
+  
   <dt>August 20, 2005</dt>
   <dd>
     The Belgian newspaper <em>De Standaard</em> investigates what
