@@ -1,3 +1,7 @@
+2005-12-15  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/about/pubs.html: Mention linuxjournal.com article.
+
 2005-12-14  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
 
 	* fr/about/index.html: update Links
